deploy: 759bcfba2066053251b164a00170dcd77cd20779

--- a/coding/Intro to Python/Functions.html
+++ b/coding/Intro to Python/Functions.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Handling errors" href="Handling_errors.html" />
-    <link rel="prev" title="Printing and formatting statements" href="Printing_and_formatting_statements.html" />
+    <link rel="prev" title="For loops" href="For_loops.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -83,7 +83,16 @@
       <a href="intro.html">Intro To Python</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
+        <a href="Dictionaries.html">Dictionaries</a>
+      </li>
+      <li class="">
+        <a href="File_handling.html">File handling in Python</a>
+      </li>
+      <li class="">
+        <a href="Flow_control_statements.html">Flow control statements</a>
+      </li>
+      <li class="">
+        <a href="For_loops.html">For loops</a>
       </li>
       <li class="active">
         <a href="">Creating custom functions</a>
@@ -92,46 +101,37 @@
         <a href="Handling_errors.html">Handling errors</a>
       </li>
       <li class="">
-        <a href="File_handling.html">File handling in Python</a>
-      </li>
-      <li class="">
-        <a href="While_loops.html">While loops</a>
+        <a href="If_statement.html">If construct</a>
       </li>
       <li class="">
         <a href="Importing.html">Importing in Python</a>
       </li>
       <li class="">
-        <a href="If_statement.html">If construct</a>
-      </li>
-      <li class="">
         <a href="List_comprehensions.html">List comprehensions</a>
-      </li>
-      <li class="">
-        <a href="Tuples.html">Tuples</a>
-      </li>
-      <li class="">
-        <a href="Sets.html">Sets</a>
-      </li>
-      <li class="">
-        <a href="For_loops.html">For loops</a>
-      </li>
-      <li class="">
-        <a href="Matplotlib.html">Plotting data with Matplotlib</a>
       </li>
       <li class="">
         <a href="Lists.html">Lists</a>
       </li>
       <li class="">
-        <a href="Dictionaries.html">Dictionaries</a>
-      </li>
-      <li class="">
-        <a href="Variables.html">Variables</a>
+        <a href="Matplotlib.html">Plotting data with Matplotlib</a>
       </li>
       <li class="">
         <a href="Nested_lists.html">Nested lists</a>
       </li>
       <li class="">
-        <a href="Flow_control_statements.html">Flow control statements</a>
+        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
+      </li>
+      <li class="">
+        <a href="Sets.html">Sets</a>
+      </li>
+      <li class="">
+        <a href="Tuples.html">Tuples</a>
+      </li>
+      <li class="">
+        <a href="Variables.html">Variables</a>
+      </li>
+      <li class="">
+        <a href="While_loops.html">While loops</a>
       </li>
     </ul>
     </li>
@@ -337,7 +337,7 @@ a = 16
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Printing_and_formatting_statements.html" title="previous page">Printing and formatting statements</a>
+    <a class='left-prev' id="prev-link" href="For_loops.html" title="previous page">For loops</a>
     <a class='right-next' id="next-link" href="Handling_errors.html" title="next page">Handling errors</a>
 
     </div>
