--- a/coding/Pandas/Pandas_1basics.html
+++ b/coding/Pandas/Pandas_1basics.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Plotting" href="Pandas_6plotting.html" />
+    <link rel="next" title="Filtering, selecting and assigning" href="Pandas_2filter_select_assign.html" />
     <link rel="prev" title="Pandas" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -89,19 +89,19 @@
         <a href="">Introduction</a>
       </li>
       <li class="">
-        <a href="Pandas_6plotting.html">Plotting</a>
+        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
       </li>
       <li class="">
         <a href="Pandas_3merge_combine_group_sort.html">Merging, combining, grouping and sorting</a>
       </li>
       <li class="">
+        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
+      </li>
+      <li class="">
         <a href="Pandas_5time_stamps.html">Creating date-time stamps</a>
       </li>
       <li class="">
-        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
-      </li>
-      <li class="">
-        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
+        <a href="Pandas_6plotting.html">Plotting</a>
       </li>
     </ul>
     </li>
@@ -553,7 +553,7 @@ dtype: object
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Pandas</a>
-    <a class='right-next' id="next-link" href="Pandas_6plotting.html" title="next page">Plotting</a>
+    <a class='right-next' id="next-link" href="Pandas_2filter_select_assign.html" title="next page">Filtering, selecting and assigning</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
