--- a/coding/Pandas/intro.html
+++ b/coding/Pandas/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Introduction" href="Pandas_1basics.html" />
-    <link rel="prev" title="Flow control statements" href="../Intro to Python/Flow_control_statements.html" />
+    <link rel="prev" title="While loops" href="../Intro to Python/While_loops.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -89,19 +89,19 @@
         <a href="Pandas_1basics.html">Introduction</a>
       </li>
       <li class="">
-        <a href="Pandas_6plotting.html">Plotting</a>
+        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
       </li>
       <li class="">
         <a href="Pandas_3merge_combine_group_sort.html">Merging, combining, grouping and sorting</a>
       </li>
       <li class="">
+        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
+      </li>
+      <li class="">
         <a href="Pandas_5time_stamps.html">Creating date-time stamps</a>
       </li>
       <li class="">
-        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
-      </li>
-      <li class="">
-        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
+        <a href="Pandas_6plotting.html">Plotting</a>
       </li>
     </ul>
     </li>
@@ -266,7 +266,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Intro to Python/Flow_control_statements.html" title="previous page">Flow control statements</a>
+    <a class='left-prev' id="prev-link" href="../Intro to Python/While_loops.html" title="previous page">While loops</a>
     <a class='right-next' id="next-link" href="Pandas_1basics.html" title="next page">Introduction</a>
 
     </div>
