--- a/mathematics/complex analysis/intro.html
+++ b/mathematics/complex analysis/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex integration" href="integrating.html" />
+    <link rel="next" title="Fractals" href="Fractals.html" />
     <link rel="prev" title="Vector calculus" href="../calculus/Vector_calculus.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -89,7 +89,10 @@
       <a href="">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="integrating.html">Complex integration</a>
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
       </li>
       <li class="">
         <a href="complex_functions.html">Complex functions</a>
@@ -101,10 +104,7 @@
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="">
-        <a href="Introduction.html">Introduction</a>
-      </li>
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
+        <a href="integrating.html">Complex integration</a>
       </li>
     </ul>
     </li>
@@ -307,7 +307,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../calculus/Vector_calculus.html" title="previous page">Vector calculus</a>
-    <a class='right-next' id="next-link" href="integrating.html" title="next page">Complex integration</a>
+    <a class='right-next' id="next-link" href="Fractals.html" title="next page">Fractals</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
