--- a/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
+++ b/mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Mathematical Methods 1" href="../math_methods_1/intro.html" />
-    <link rel="prev" title="Solving systems of linear equations" href="Linear_Systems.html" />
+    <link rel="next" title="Solving systems of linear equations" href="Linear_Systems.html" />
+    <link rel="prev" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -94,14 +94,14 @@
       <li class="">
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
       </li>
-      <li class="">
-        <a href="Theory.html">Theory</a>
+      <li class="active">
+        <a href="">Eigenvalues and eigenvectors</a>
       </li>
       <li class="">
         <a href="Linear_Systems.html">Solving systems of linear equations</a>
       </li>
-      <li class="active">
-        <a href="">Eigenvalues and eigenvectors</a>
+      <li class="">
+        <a href="Theory.html">Theory</a>
       </li>
     </ul>
     </li>
@@ -603,8 +603,8 @@ Eigenvectors:
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Linear_Systems.html" title="previous page">Solving systems of linear equations</a>
-    <a class='right-next' id="next-link" href="../math_methods_1/intro.html" title="next page">Mathematical Methods 1</a>
+    <a class='left-prev' id="prev-link" href="Basic_definitions_and_operations.html" title="previous page">Basic definitions and operations</a>
+    <a class='right-next' id="next-link" href="Linear_Systems.html" title="next page">Solving systems of linear equations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
