--- a/mathematics/linear_algebra/Linear_Systems.html
+++ b/mathematics/linear_algebra/Linear_Systems.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Eigenvalues and eigenvectors" href="Eigenvalues_and_eigenvectors.html" />
-    <link rel="prev" title="Theory" href="Theory.html" />
+    <link rel="next" title="Theory" href="Theory.html" />
+    <link rel="prev" title="Eigenvalues and eigenvectors" href="Eigenvalues_and_eigenvectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -95,13 +95,13 @@
         <a href="Basic_definitions_and_operations.html">Basic definitions and operations</a>
       </li>
       <li class="">
-        <a href="Theory.html">Theory</a>
+        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
       </li>
       <li class="active">
         <a href="">Solving systems of linear equations</a>
       </li>
       <li class="">
-        <a href="Eigenvalues_and_eigenvectors.html">Eigenvalues and eigenvectors</a>
+        <a href="Theory.html">Theory</a>
       </li>
     </ul>
     </li>
@@ -853,8 +853,8 @@ I \mathbf{x} = A^{-1}\mathbf{b} \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Theory.html" title="previous page">Theory</a>
-    <a class='right-next' id="next-link" href="Eigenvalues_and_eigenvectors.html" title="next page">Eigenvalues and eigenvectors</a>
+    <a class='left-prev' id="prev-link" href="Eigenvalues_and_eigenvectors.html" title="previous page">Eigenvalues and eigenvectors</a>
+    <a class='right-next' id="next-link" href="Theory.html" title="next page">Theory</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
