--- a/mathematics/mathematical_notation/intro.html
+++ b/mathematics/mathematical_notation/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Review of tensors" href="Tensors_Review.html" />
+    <link rel="next" title="Big O notation" href="Big_O_notation.html" />
     <link rel="prev" title="Lecture 1 (Vectors)" href="../math_methods_1/Vectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -98,10 +98,10 @@
       <a href="">Mathematical Notation</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Tensors_Review.html">Review of tensors</a>
+        <a href="Big_O_notation.html">Big O notation</a>
       </li>
       <li class="">
-        <a href="Big_O_notation.html">Big O notation</a>
+        <a href="Tensors_Review.html">Review of tensors</a>
       </li>
     </ul>
     </li>
@@ -228,7 +228,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../math_methods_1/Vectors.html" title="previous page">Lecture 1 (Vectors)</a>
-    <a class='right-next' id="next-link" href="Tensors_Review.html" title="next page">Review of tensors</a>
+    <a class='right-next' id="next-link" href="Big_O_notation.html" title="next page">Big O notation</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
