--- a/coding/Intro to Python/Matplotlib.html
+++ b/coding/Intro to Python/Matplotlib.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Lists" href="Lists.html" />
-    <link rel="prev" title="For loops" href="For_loops.html" />
+    <link rel="next" title="Nested lists" href="Nested_lists.html" />
+    <link rel="prev" title="Lists" href="Lists.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -83,7 +83,16 @@
       <a href="intro.html">Intro To Python</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
+        <a href="Dictionaries.html">Dictionaries</a>
+      </li>
+      <li class="">
+        <a href="File_handling.html">File handling in Python</a>
+      </li>
+      <li class="">
+        <a href="Flow_control_statements.html">Flow control statements</a>
+      </li>
+      <li class="">
+        <a href="For_loops.html">For loops</a>
       </li>
       <li class="">
         <a href="Functions.html">Creating custom functions</a>
@@ -92,46 +101,37 @@
         <a href="Handling_errors.html">Handling errors</a>
       </li>
       <li class="">
-        <a href="File_handling.html">File handling in Python</a>
-      </li>
-      <li class="">
-        <a href="While_loops.html">While loops</a>
+        <a href="If_statement.html">If construct</a>
       </li>
       <li class="">
         <a href="Importing.html">Importing in Python</a>
       </li>
       <li class="">
-        <a href="If_statement.html">If construct</a>
-      </li>
-      <li class="">
         <a href="List_comprehensions.html">List comprehensions</a>
       </li>
       <li class="">
-        <a href="Tuples.html">Tuples</a>
-      </li>
-      <li class="">
-        <a href="Sets.html">Sets</a>
-      </li>
-      <li class="">
-        <a href="For_loops.html">For loops</a>
+        <a href="Lists.html">Lists</a>
       </li>
       <li class="active">
         <a href="">Plotting data with Matplotlib</a>
       </li>
       <li class="">
-        <a href="Lists.html">Lists</a>
+        <a href="Nested_lists.html">Nested lists</a>
       </li>
       <li class="">
-        <a href="Dictionaries.html">Dictionaries</a>
+        <a href="Printing_and_formatting_statements.html">Printing and formatting statements</a>
+      </li>
+      <li class="">
+        <a href="Sets.html">Sets</a>
+      </li>
+      <li class="">
+        <a href="Tuples.html">Tuples</a>
       </li>
       <li class="">
         <a href="Variables.html">Variables</a>
       </li>
       <li class="">
-        <a href="Nested_lists.html">Nested lists</a>
-      </li>
-      <li class="">
-        <a href="Flow_control_statements.html">Flow control statements</a>
+        <a href="While_loops.html">While loops</a>
       </li>
     </ul>
     </li>
@@ -504,8 +504,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="For_loops.html" title="previous page">For loops</a>
-    <a class='right-next' id="next-link" href="Lists.html" title="next page">Lists</a>
+    <a class='left-prev' id="prev-link" href="Lists.html" title="previous page">Lists</a>
+    <a class='right-next' id="next-link" href="Nested_lists.html" title="next page">Nested lists</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
