--- a/coding/Pandas/Pandas_2filter_select_assign.html
+++ b/coding/Pandas/Pandas_2filter_select_assign.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Summary statistics" href="Pandas_4summary_statistics.html" />
-    <link rel="prev" title="Creating date-time stamps" href="Pandas_5time_stamps.html" />
+    <link rel="next" title="Merging, combining, grouping and sorting" href="Pandas_3merge_combine_group_sort.html" />
+    <link rel="prev" title="Introduction" href="Pandas_1basics.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -88,20 +88,20 @@
       <li class="">
         <a href="Pandas_1basics.html">Introduction</a>
       </li>
-      <li class="">
-        <a href="Pandas_6plotting.html">Plotting</a>
+      <li class="active">
+        <a href="">Filtering, selecting and assigning</a>
       </li>
       <li class="">
         <a href="Pandas_3merge_combine_group_sort.html">Merging, combining, grouping and sorting</a>
       </li>
       <li class="">
-        <a href="Pandas_5time_stamps.html">Creating date-time stamps</a>
-      </li>
-      <li class="active">
-        <a href="">Filtering, selecting and assigning</a>
+        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
       </li>
       <li class="">
-        <a href="Pandas_4summary_statistics.html">Summary statistics</a>
+        <a href="Pandas_5time_stamps.html">Creating date-time stamps</a>
+      </li>
+      <li class="">
+        <a href="Pandas_6plotting.html">Plotting</a>
       </li>
     </ul>
     </li>
@@ -684,8 +684,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Pandas_5time_stamps.html" title="previous page">Creating date-time stamps</a>
-    <a class='right-next' id="next-link" href="Pandas_4summary_statistics.html" title="next page">Summary statistics</a>
+    <a class='left-prev' id="prev-link" href="Pandas_1basics.html" title="previous page">Introduction</a>
+    <a class='right-next' id="next-link" href="Pandas_3merge_combine_group_sort.html" title="next page">Merging, combining, grouping and sorting</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
