--- a/coding/Pandas/Pandas_4summary_statistics.html
+++ b/coding/Pandas/Pandas_4summary_statistics.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Extra resources for researchers" href="../../extra_resources_for_researchers/intro.html" />
-    <link rel="prev" title="Filtering, selecting and assigning" href="Pandas_2filter_select_assign.html" />
+    <link rel="next" title="Creating date-time stamps" href="Pandas_5time_stamps.html" />
+    <link rel="prev" title="Merging, combining, grouping and sorting" href="Pandas_3merge_combine_group_sort.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -89,19 +89,19 @@
         <a href="Pandas_1basics.html">Introduction</a>
       </li>
       <li class="">
-        <a href="Pandas_6plotting.html">Plotting</a>
+        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
       </li>
       <li class="">
         <a href="Pandas_3merge_combine_group_sort.html">Merging, combining, grouping and sorting</a>
+      </li>
+      <li class="active">
+        <a href="">Summary statistics</a>
       </li>
       <li class="">
         <a href="Pandas_5time_stamps.html">Creating date-time stamps</a>
       </li>
       <li class="">
-        <a href="Pandas_2filter_select_assign.html">Filtering, selecting and assigning</a>
-      </li>
-      <li class="active">
-        <a href="">Summary statistics</a>
+        <a href="Pandas_6plotting.html">Plotting</a>
       </li>
     </ul>
     </li>
@@ -519,8 +519,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Pandas_2filter_select_assign.html" title="previous page">Filtering, selecting and assigning</a>
-    <a class='right-next' id="next-link" href="../../extra_resources_for_researchers/intro.html" title="next page">Extra resources for researchers</a>
+    <a class='left-prev' id="prev-link" href="Pandas_3merge_combine_group_sort.html" title="previous page">Merging, combining, grouping and sorting</a>
+    <a class='right-next' id="next-link" href="Pandas_5time_stamps.html" title="next page">Creating date-time stamps</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
