--- a/extra_resources_for_researchers/Camera_Calibration.html
+++ b/extra_resources_for_researchers/Camera_Calibration.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Geosciences" href="../geosciences/intro.html" />
-    <link rel="prev" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
+    <link rel="next" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
+    <link rel="prev" title="Extra resources for researchers" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -76,20 +76,20 @@
   <li class="active">
     <a href="intro.html">Extra Resources For Researchers</a>
   <ul class="nav sidenav_l2">
+    <li class="active">
+      <a href="">Camera Calibration</a>
+    </li>
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
+      <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
     </li>
     <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
     </li>
     <li class="">
-      <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
-    </li>
-    <li class="active">
-      <a href="">Camera Calibration</a>
+      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
   </ul>
   </li>
@@ -449,8 +449,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Creating maps in Cartopy</a>
-    <a class='right-next' id="next-link" href="../geosciences/intro.html" title="next page">Geosciences</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Extra resources for researchers</a>
+    <a class='right-next' id="next-link" href="Cartography_Cartopy.html" title="next page">Creating maps in Cartopy</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
