--- a/extra_resources_for_researchers/intro.html
+++ b/extra_resources_for_researchers/intro.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
-    <link rel="prev" title="Summary statistics" href="../coding/Pandas/Pandas_4summary_statistics.html" />
+    <link rel="next" title="Camera Calibration" href="Camera_Calibration.html" />
+    <link rel="prev" title="Plotting" href="../coding/Pandas/Pandas_6plotting.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -77,19 +77,19 @@
     <a href="">Extra Resources For Researchers</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
-    </li>
-    <li class="">
-      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
-    </li>
-    <li class="">
-      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
+      <a href="Camera_Calibration.html">Camera Calibration</a>
     </li>
     <li class="">
       <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
     </li>
     <li class="">
-      <a href="Camera_Calibration.html">Camera Calibration</a>
+      <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
+    </li>
+    <li class="">
+      <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
+    </li>
+    <li class="">
+      <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
   </ul>
   </li>
@@ -208,8 +208,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../coding/Pandas/Pandas_4summary_statistics.html" title="previous page">Summary statistics</a>
-    <a class='right-next' id="next-link" href="Google_Earth_Engine_Getting_Started_.html" title="next page">Google Earth Engine Getting Started</a>
+    <a class='left-prev' id="prev-link" href="../coding/Pandas/Pandas_6plotting.html" title="previous page">Plotting</a>
+    <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera Calibration</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
