--- a/geosciences/Dynamic_Earth.html
+++ b/geosciences/Dynamic_Earth.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Image Transformations and orthorectification" href="Image_Transformations_and_Orthorectification.html" />
-    <link rel="prev" title="Geosciences" href="intro.html" />
+    <link rel="next" title="Image Filtering" href="Image_Filtering.html" />
+    <link rel="prev" title="Constructing an energy balance model" href="Climate_Model.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -79,35 +79,35 @@
   <li class="active">
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
-    <li class="active">
-      <a href="">Dynamic Earth and Planets</a>
-    </li>
     <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
     </li>
     <li class="">
       <a href="Climate_Model.html">Constructing an energy balance model</a>
     </li>
-    <li class="">
-      <a href="Tides.html">Tides</a>
-    </li>
-    <li class="">
-      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
-    </li>
-    <li class="">
-      <a href="Wave_dispersion.html">Waves</a>
-    </li>
-    <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+    <li class="active">
+      <a href="">Dynamic Earth and Planets</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="">
+      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
+    </li>
+    <li class="">
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
+    </li>
+    <li class="">
+      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
+    </li>
+    <li class="">
       <a href="Seismology.html">Downloading earthquake data</a>
     </li>
     <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
+      <a href="Tides.html">Tides</a>
+    </li>
+    <li class="">
+      <a href="Wave_dispersion.html">Waves</a>
     </li>
   </ul>
   </li>
@@ -855,8 +855,8 @@ Number of points within 2*RMS = 97.10 %.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Geosciences</a>
-    <a class='right-next' id="next-link" href="Image_Transformations_and_Orthorectification.html" title="next page">Image Transformations and orthorectification</a>
+    <a class='left-prev' id="prev-link" href="Climate_Model.html" title="previous page">Constructing an energy balance model</a>
+    <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">Image Filtering</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
