--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
-    <link rel="prev" title="Milankovitch cycles" href="Milankovitch_cycles.html" />
+    <link rel="next" title="Mathematics" href="../mathematics/intro.html" />
+    <link rel="prev" title="Tides" href="Tides.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -80,34 +80,34 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
-    </li>
-    <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
     </li>
     <li class="">
       <a href="Climate_Model.html">Constructing an energy balance model</a>
     </li>
     <li class="">
-      <a href="Tides.html">Tides</a>
-    </li>
-    <li class="">
-      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
-    </li>
-    <li class="active">
-      <a href="">Waves</a>
-    </li>
-    <li class="">
-      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+      <a href="Dynamic_Earth.html">Dynamic Earth and Planets</a>
     </li>
     <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="">
+      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
+    </li>
+    <li class="">
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
+    </li>
+    <li class="">
+      <a href="Milankovitch_cycles.html">Milankovitch cycles</a>
+    </li>
+    <li class="">
       <a href="Seismology.html">Downloading earthquake data</a>
     </li>
     <li class="">
-      <a href="Image_Point_Operations.html">Remote Sensing: Image Point Operations</a>
+      <a href="Tides.html">Tides</a>
+    </li>
+    <li class="active">
+      <a href="">Waves</a>
     </li>
   </ul>
   </li>
@@ -7681,8 +7681,8 @@ b28AAAAdZGF0YQAAAAEAAAAATGF2ZjU4LjI5LjEwMA==
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Milankovitch_cycles.html" title="previous page">Milankovitch cycles</a>
-    <a class='right-next' id="next-link" href="1D_Resistivity_Forward_Modelling.html" title="next page">1D Resistivity Forward Modelling</a>
+    <a class='left-prev' id="prev-link" href="Tides.html" title="previous page">Tides</a>
+    <a class='right-next' id="next-link" href="../mathematics/intro.html" title="next page">Mathematics</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
