--- a/mathematics/complex analysis/holomorphic_functions.html
+++ b/mathematics/complex analysis/holomorphic_functions.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Introduction" href="Introduction.html" />
+    <link rel="next" title="Complex integration" href="integrating.html" />
     <link rel="prev" title="Complex plane" href="complex_plane.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -89,7 +89,10 @@
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
-        <a href="integrating.html">Complex integration</a>
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
       </li>
       <li class="">
         <a href="complex_functions.html">Complex functions</a>
@@ -101,10 +104,7 @@
         <a href="">Holomorphic functions</a>
       </li>
       <li class="">
-        <a href="Introduction.html">Introduction</a>
-      </li>
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
+        <a href="integrating.html">Complex integration</a>
       </li>
     </ul>
     </li>
@@ -374,7 +374,7 @@ f'(z_0) &amp; = \partial_x u + i \partial_x v =: \partial_x f(z_0) \\
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="complex_plane.html" title="previous page">Complex plane</a>
-    <a class='right-next' id="next-link" href="Introduction.html" title="next page">Introduction</a>
+    <a class='right-next' id="next-link" href="integrating.html" title="next page">Complex integration</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
