--- a/mathematics/complex analysis/integrating.html
+++ b/mathematics/complex analysis/integrating.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex functions" href="complex_functions.html" />
-    <link rel="prev" title="Complex Analysis" href="intro.html" />
+    <link rel="next" title="Linear Algebra" href="../linear_algebra/intro.html" />
+    <link rel="prev" title="Holomorphic functions" href="holomorphic_functions.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -88,8 +88,11 @@
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
-      <li class="active">
-        <a href="">Complex integration</a>
+      <li class="">
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
       </li>
       <li class="">
         <a href="complex_functions.html">Complex functions</a>
@@ -100,11 +103,8 @@
       <li class="">
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
-      <li class="">
-        <a href="Introduction.html">Introduction</a>
-      </li>
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
+      <li class="active">
+        <a href="">Complex integration</a>
       </li>
     </ul>
     </li>
@@ -440,8 +440,8 @@ f( \gamma_2 (t) ) = \frac{1}{e^{it}}, \quad \gamma_2 ' (t) = i e^{it} \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Complex Analysis</a>
-    <a class='right-next' id="next-link" href="complex_functions.html" title="next page">Complex functions</a>
+    <a class='left-prev' id="prev-link" href="holomorphic_functions.html" title="previous page">Holomorphic functions</a>
+    <a class='right-next' id="next-link" href="../linear_algebra/intro.html" title="next page">Linear Algebra</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
