--- a/mathematics/mathematical_notation/Big_O_notation.html
+++ b/mathematics/mathematical_notation/Big_O_notation.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Numerical methods" href="../numerical_methods/intro.html" />
-    <link rel="prev" title="Review of tensors" href="Tensors_Review.html" />
+    <link rel="next" title="Review of tensors" href="Tensors_Review.html" />
+    <link rel="prev" title="Mathematical notation" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -97,11 +97,11 @@
     <li class="active">
       <a href="intro.html">Mathematical Notation</a>
       <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="Tensors_Review.html">Review of tensors</a>
-      </li>
       <li class="active">
         <a href="">Big O notation</a>
+      </li>
+      <li class="">
+        <a href="Tensors_Review.html">Review of tensors</a>
       </li>
     </ul>
     </li>
@@ -347,8 +347,8 @@ if for large enough <span class="math notranslate nohighlight">\(n\)</span>, whe
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Tensors_Review.html" title="previous page">Review of tensors</a>
-    <a class='right-next' id="next-link" href="../numerical_methods/intro.html" title="next page">Numerical methods</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematical notation</a>
+    <a class='right-next' id="next-link" href="Tensors_Review.html" title="next page">Review of tensors</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
