--- a/mathematics/mathematical_notation/Tensors_Review.html
+++ b/mathematics/mathematical_notation/Tensors_Review.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Big O notation" href="Big_O_notation.html" />
-    <link rel="prev" title="Mathematical notation" href="intro.html" />
+    <link rel="next" title="Numerical methods" href="../numerical_methods/intro.html" />
+    <link rel="prev" title="Big O notation" href="Big_O_notation.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -97,11 +97,11 @@
     <li class="active">
       <a href="intro.html">Mathematical Notation</a>
       <ul class="nav sidenav_l3">
-      <li class="active">
-        <a href="">Review of tensors</a>
-      </li>
       <li class="">
         <a href="Big_O_notation.html">Big O notation</a>
+      </li>
+      <li class="active">
+        <a href="">Review of tensors</a>
       </li>
     </ul>
     </li>
@@ -380,8 +380,8 @@ c_k \mathbf{\hat{e}}_k\cdot\mathbf{\hat{e}}_k=c_k=a_i b_j (\mathbf{\hat{e}}_i\ti
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematical notation</a>
-    <a class='right-next' id="next-link" href="Big_O_notation.html" title="next page">Big O notation</a>
+    <a class='left-prev' id="prev-link" href="Big_O_notation.html" title="previous page">Big O notation</a>
+    <a class='right-next' id="next-link" href="../numerical_methods/intro.html" title="next page">Numerical methods</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
