--- a/mathematics/sets and functions/composition_and_inverse.html
+++ b/mathematics/sets and functions/composition_and_inverse.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Elementary functions 2" href="elementary_functions_2.html" />
-    <link rel="prev" title="Functions" href="functions.html" />
+    <link rel="next" title="Elementary functions 1" href="elementary_functions_1.html" />
+    <link rel="prev" title="Sets and functions" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -106,17 +106,17 @@
     <li class="active">
       <a href="intro.html">Sets And Functions</a>
       <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="functions.html">Functions</a>
-      </li>
       <li class="active">
         <a href="">Composition and Inverse Functions</a>
+      </li>
+      <li class="">
+        <a href="elementary_functions_1.html">Elementary functions 1</a>
       </li>
       <li class="">
         <a href="elementary_functions_2.html">Elementary functions 2</a>
       </li>
       <li class="">
-        <a href="elementary_functions_1.html">Elementary functions 1</a>
+        <a href="functions.html">Functions</a>
       </li>
       <li class="">
         <a href="logic.html">Logic and proof</a>
@@ -348,8 +348,8 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="functions.html" title="previous page">Functions</a>
-    <a class='right-next' id="next-link" href="elementary_functions_2.html" title="next page">Elementary functions 2</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Sets and functions</a>
+    <a class='right-next' id="next-link" href="elementary_functions_1.html" title="next page">Elementary functions 1</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
