--- a/extra_resources_for_researchers/Cartography_Cartopy.html
+++ b/extra_resources_for_researchers/Cartography_Cartopy.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Google Earth Engine Foundations" href="Google_Earth_Engine_Foundations.html" />
+    <link rel="next" title="Dakota" href="Dakota.html" />
     <link rel="prev" title="Camera Calibration" href="Camera_Calibration.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -81,6 +81,9 @@
     </li>
     <li class="active">
       <a href="">Creating maps in Cartopy</a>
+    </li>
+    <li class="">
+      <a href="Dakota.html">Dakota</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
@@ -749,7 +752,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Camera_Calibration.html" title="previous page">Camera Calibration</a>
-    <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine Foundations</a>
+    <a class='right-next' id="next-link" href="Dakota.html" title="next page">Dakota</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
