--- a/extra_resources_for_researchers/Google_Earth_Engine_Foundations.html
+++ b/extra_resources_for_researchers/Google_Earth_Engine_Foundations.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
-    <link rel="prev" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
+    <link rel="prev" title="Dakota" href="Dakota.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -81,6 +81,9 @@
     </li>
     <li class="">
       <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
+    </li>
+    <li class="">
+      <a href="Dakota.html">Dakota</a>
     </li>
     <li class="active">
       <a href="">Google Earth Engine Foundations</a>
@@ -579,7 +582,7 @@ Without CloudMask function:
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Creating maps in Cartopy</a>
+    <a class='left-prev' id="prev-link" href="Dakota.html" title="previous page">Dakota</a>
     <a class='right-next' id="next-link" href="Google_Earth_Engine_Getting_Started_.html" title="next page">Google Earth Engine Getting Started</a>
 
     </div>
