--- a/extra_resources_for_researchers/intro.html
+++ b/extra_resources_for_researchers/intro.html
@@ -83,6 +83,9 @@
       <a href="Cartography_Cartopy.html">Creating maps in Cartopy</a>
     </li>
     <li class="">
+      <a href="Dakota.html">Dakota</a>
+    </li>
+    <li class="">
       <a href="Google_Earth_Engine_Foundations.html">Google Earth Engine Foundations</a>
     </li>
     <li class="">
