deploy: dd89946b326d2c297b771a10a2fdec99d4dd1ba6

--- a/coding/NumPy_Arrays.html
+++ b/coding/NumPy_Arrays.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Introduction to Python programming language" href="Intro to Python/intro.html" />
-    <link rel="prev" title="Dakota" href="Dakota.html" />
+    <link rel="prev" title="The Python Programming Language" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -73,9 +73,6 @@
   <li class="active">
     <a href="intro.html">Coding</a>
   <ul class="nav sidenav_l2">
-    <li class="">
-      <a href="Dakota.html">Dakota</a>
-    </li>
     <li class="active">
       <a href="">NumPy Arrays</a>
     </li>
@@ -496,7 +493,7 @@ A[:, ::-1] =
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Dakota.html" title="previous page">Dakota</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">The Python Programming Language</a>
     <a class='right-next' id="next-link" href="Intro to Python/intro.html" title="next page">Introduction to Python programming language</a>
 
     </div>
