--- a/coding/intro.html
+++ b/coding/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Dakota" href="Dakota.html" />
+    <link rel="next" title="NumPy Arrays" href="NumPy_Arrays.html" />
     <link rel="prev" title="Landing page" href="../intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,9 +73,6 @@
   <li class="active">
     <a href="">Coding</a>
   <ul class="nav sidenav_l2">
-    <li class="">
-      <a href="Dakota.html">Dakota</a>
-    </li>
     <li class="">
       <a href="NumPy_Arrays.html">NumPy Arrays</a>
     </li>
@@ -206,7 +203,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../intro.html" title="previous page">Landing page</a>
-    <a class='right-next' id="next-link" href="Dakota.html" title="next page">Dakota</a>
+    <a class='right-next' id="next-link" href="NumPy_Arrays.html" title="next page">NumPy Arrays</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
